[project]
name = "promptprism"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = [
    "anthropic>=0.42.0",
    "deepseek>=0.0.1.dev0",
    "instructor[litellm]>=1.7.2",
    "litellm>=1.56.6",
    "ollama>=0.4.5",
]

[project.urls]
Repository = "https://github.com/Bewinxed/PromptPrism"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "bewinxed"
DisplayName = "PromptPrism 🌈⃤"
Icon = "https://raw.githubusercontent.com/Bewinxed/PromptPrism/refs/heads/master/prism.png"
